--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ ebooklib==0.18
 openai==1.3.7
 python-dotenv==1.0.0
 google-genai
-# marker-pdf dependencies - install separately to avoid conflicts
+marker-pdf
 torch
 transformers
 pillow
